Syntax: changes to dev inventory contributes:ekstep/Learning-Platform #616,617

--- a/platform-devops/ansible/provision.yml
+++ b/platform-devops/ansible/provision.yml
@@ -52,3 +52,15 @@
   become: yes
   roles:
         - mongodb
+
+- hosts: hosttotal
+  gather_facts: no
+  become: yes
+  roles:
+        - java
+        - createpath
+        - aws-login
+        - tomcat
+        - ffmpeg
+        - imagemagick
+        - logstash 
