Syntax: Updated all the tags contributes:ekstep/Learning-Platform #616,617

--- a/platform-devops/ansible/roles/createpath/tasks/main.yml
+++ b/platform-devops/ansible/roles/createpath/tasks/main.yml
@@ -1,3 +1,53 @@
+- name: create folder data for learning
+  become: yes
+  file: path={{ item }} state=directory mode=0755
+  with_items:
+     - /data
+     - /data/graphDB
+     - /data/logs
+     - /data/contentBundle
+     - /data/properties
+     - /data/properties/learning
+  tags:
+       - learning
+
+- name: create folder data 
+  become: yes
+  file: path={{ item }} state=directory mode=0755
+  with_items:
+     - /data
+     - /data/logs
+     - /data/contentBundle
+     - /data/properties
+     - /data/properties/language
+  tags:
+       - language
+
+- name: create folder data
+  become: yes
+  file: path={{ item }} state=directory mode=0755
+  with_items:
+     - /data
+     - /data/logs
+     - /data/contentBundle
+     - /data/properties
+     - /data/properties/search
+     
+  tags:
+       - search
+
+- name: create folder data
+  become: yes
+  file: path={{ item }} state=directory mode=0755
+  with_items:
+     - /data
+     - /data/logs
+     - /data/contentBundle
+     - /data/properties
+     - /data/properties/config
+  tags:
+       - config
+
 - name: create folder data
   become: yes
   file: path={{ item }} state=directory mode=0755
@@ -12,7 +62,8 @@
      - /data/properties/search
      - /data/properties/config
   tags:
-       - always
+       - total
+
 
 - name: Change ownership of data directory
   become: yes
