--- a/platform-devops/ansible/roles/imagemagick/tasks/main.yml
+++ b/platform-devops/ansible/roles/imagemagick/tasks/main.yml
@@ -3,5 +3,6 @@
 - name: install imagemagick
   yum: name=ImageMagick state=present update_cache=yes
   tags:
-       - always
+       - learning
+       - total
 
