Syntax: Updated all the tags contributes:ekstep/Learning-Platform #616,617

--- a/platform-devops/ansible/provision.yml
+++ b/platform-devops/ansible/provision.yml
@@ -1,14 +1,4 @@
-- hosts: hostlanguage
-  gather_facts: no
-  become: yes
-  roles:
-        - java
-        - createpath
-        - aws-login
-        - tomcat
-        - logstash
-
-- hosts: hostlearning
+- hosts: "{{remote}}"
   gather_facts: no
   become: yes
   roles:
@@ -18,48 +8,4 @@
         - tomcat
         - ffmpeg
         - imagemagick
-        - logstash  
-
-
-- hosts: hostsearch
-  gather_facts: no
-  become: yes
-  roles:
-        - java
-        - createpath
-        - aws-login
-        - tomcat
         - logstash
-
-- hosts: hostconfig
-  gather_facts: no
-  become: yes
-  roles:
-        - java
-        - createpath
-        - aws-login
-        - tomcat  
-      
-- hosts: hostredis
-  gather_facts: no
-  become: yes
-  roles:
-        - redis
-
-- hosts: hostmongodb
-  gather_facts: no
-  become: yes
-  roles:
-        - mongodb
-
-- hosts: hosttotal
-  gather_facts: no
-  become: yes
-  roles:
-        - java
-        - createpath
-        - aws-login
-        - tomcat
-        - ffmpeg
-        - imagemagick
-        - logstash 
