Syntax: Changes to the provision.yml playbook contributes:ekstep/Learning-Platform #616,617

--- a/platform-devops/ansible/deploy.yml
+++ b/platform-devops/ansible/deploy.yml
@@ -1,15 +1,3 @@
-- hosts: hostlearning
-  roles:
-        - deployartifact
-
-- hosts: hostlanguage
-  roles:
-        - deployartifact
-
-- hosts: hostsearch
-  roles:
-        - deployartifact
-
-- hosts: hostconfig
+- hosts: "{{remote}}"
   roles:
         - deployartifact
