--- a/platform-devops/ansible/roles/createpath/tasks/main.yml
+++ b/platform-devops/ansible/roles/createpath/tasks/main.yml
@@ -16,6 +16,7 @@
   file: path={{ item }} state=directory mode=0755
   with_items:
      - /data
+     - /data/graphDB
      - /data/logs
      - /data/contentBundle
      - /data/properties
