chore: added new inventory file contributes:ekstep/Learning-Platform #616,617

--- a/platform-devops/ansible/copy_graphdb.yml
+++ b/platform-devops/ansible/copy_graphdb.yml
@@ -1,15 +1,3 @@
-- hosts: hostlearning
-  roles:
-        - copy-graphdb
-
-- hosts: hostlanguage
-  roles:
-        - copy-graphdb
-
-- hosts: hostsearch
-  roles:
-        - copy-graphdb
-
-- hosts: hostconfig
+- hosts: env
   roles:
         - copy-graphdb
