Syntax: Changed command to shell to run graphed script contributes:ekstep/Learning-Platform #616,617

--- a/platform-devops/ansible/roles/copy-graphdb/tasks/main.yml
+++ b/platform-devops/ansible/roles/copy-graphdb/tasks/main.yml
@@ -4,6 +4,6 @@
        
 - name: run script
   become: yes
-  command: nohup /home/ec2-user/copy_graphdb_script.sh "{{machine}}" &
+  shell: /home/ec2-user/copy_graphdb_script.sh "{{machine}}"
   tags: 
        - always
