--- a/platform-devops/ansible/roles/copy-graphdb/tasks/main.yml
+++ b/platform-devops/ansible/roles/copy-graphdb/tasks/main.yml
@@ -3,6 +3,6 @@
   template: src=copy_graphdb_script.j2 dest={{ user_home }}/copy_graphdb_script.sh owner=ec2-user group=ec2-user mode=0751
        
 - name: run script
-  shell: /home/ec2-user/copy_graphdb_script.sh "{{machine}}"
+  shell: nohup /home/ec2-user/copy_graphdb_script.sh "{{machine}}" &
   tags: 
        - always
