--- a/platform-devops/ansible/roles/mongodb/tasks/main.yml
+++ b/platform-devops/ansible/roles/mongodb/tasks/main.yml
@@ -12,6 +12,8 @@
   tags:
        - mongodb
 
+- name: copy setup script
+  template: src=orchestrator_setup.j2 dest={{ user_home }}/orchestrator_setup.js
 
-
-
+- name: run mongo script
+  shell: mongo < {{ user_home }}/orchestrator_setup.js
