--- a/platform-devops/ansible/stopservice.yml
+++ b/platform-devops/ansible/stopservice.yml
@@ -1,15 +1,3 @@
-- hosts: hostlearning
-  roles:
-        - stopservice
-
-- hosts: hostlanguage
-  roles:
-        - stopservice
-
-- hosts: hostsearch
-  roles:
-        - stopservice
-
-- hosts: hostconfig
+- hosts: "{{remote}}"
   roles:
         - stopservice
