--- a/platform-devops/ansible/roles/startservice/tasks/main.yml
+++ b/platform-devops/ansible/roles/startservice/tasks/main.yml
@@ -1,8 +1,16 @@
 ---
+- name: Check if mongod is running
+  shell: ps -ef | grep mongod | grep -v grep | wc -l
+  register: mongod_process
+  changed_when: false
+  ignore_errors: true
+
 
 - name: mongodb start
   become: yes
   service: name=mongod state=started
+  when: "mongo_process.stdout == '0'"
+
 
 - name: Check if redis is running
   shell: ps -ef | grep redis | grep -v grep | wc -l
