chore:Changed all tags
contributes:ekstep/Learning-Platform #616,617

--- a/platform-devops/ansible/roles/redis/tasks/main.yml
+++ b/platform-devops/ansible/roles/redis/tasks/main.yml
@@ -13,7 +13,7 @@
   become: yes
   get_url: url=http://download.redis.io/releases/redis-stable.tar.gz dest=/home/ec2-user/redis-stable.tar.gz timeout=50 force=no owner=ec2-user
   tags:
-       - redi
+       - redis
 
 
 - name: unzip 
