--- a/platform-devops/ansible/roles/aws-login/tasks/main.yml
+++ b/platform-devops/ansible/roles/aws-login/tasks/main.yml
@@ -7,20 +7,35 @@
      - { path: '.aws', state: 'directory' }
      - { path: 'credentials', state: 'touch' }
   tags:
-       - always
+       - learning
+       - language
+       - config
+       - search
+       - total
   
 - name: update .aws/credentials
   lineinfile: dest=.aws/credentials line='[default]'  state=present insertafter=EOF create=yes
   tags:
-       - always
-  
+       - learning
+       - language
+       - config
+       - search
+       - total
+ 
 - name: update access_key from env var
   lineinfile: dest=.aws/credentials line='aws_access_key_id={{ lookup('env', 'lp_aws_access_key_id') }}'  insertafter=EOF state=present create=yes
   tags:
-       - always
+       - learning
+       - language
+       - config
+       - search
+       - total
 
 - name: update secret_key from env var 
   lineinfile: dest=.aws/credentials line='aws_secret_access_key={{ lookup('env', 'lp_aws_secret_access_key') }}' insertafter=EOF state=present  create=yes
   tags:
-       - always
-  
+       - learning
+       - language
+       - config
+       - search
+       - total
