--- a/platform-devops/ansible/roles/createpath/tasks/main.yml
+++ b/platform-devops/ansible/roles/createpath/tasks/main.yml
@@ -70,4 +70,7 @@
   become: yes
   file: path=/data owner=ec2-user group=ec2-user state=directory recurse=yes
   tags:
-       - always
+       - learning
+       - language
+       - config
+       - search
