--- a/platform-devops/ansible/roles/java/tasks/main.yml
+++ b/platform-devops/ansible/roles/java/tasks/main.yml
@@ -3,34 +3,49 @@
   yum: name=java-1.8.0 state=latest
   ignore_errors: yes 
   tags:
-       - always
-
+       - learning
+       - language
+       - config
+       - search
+       - total
 
 - name: Remove Java7
   become: yes
   yum: name=java-1.7.0-openjdk state=absent
   tags:
-       - always
-
+       - learning
+       - language
+       - config
+       - search
+       - total
 
 - name: Update bashrc for JAVA_HOME
   become: yes
   lineinfile: dest=.bash_profile line='JAVA_HOME=/usr/lib/jvm/jre'  state=present insertafter=EOF create=yes
   tags:
-       - always
-
+       - learning
+       - language
+       - config
+       - search
+       - total
 
 
 - name: Export JAVA_HOME
   become: yes
   lineinfile: dest=.bash_profile  line='export JAVA_HOME'  state=present insertafter=EOF create=yes
   tags:
-       - always
-
+       - learning
+       - language
+       - config
+       - search
+       - total
 
 - name: Add JAVA_HOME to the PATH
   become: yes  
   lineinfile: dest=.bash_profile line='PATH=$PATH:$JAVA_HOME/bin' state=present insertafter=EOF create=yes
   tags:
-       - always
-
+       - learning
+       - language
+       - config
+       - search
+       - total
