--- a/platform-devops/ansible/roles/mongodb/tasks/main.yml
+++ b/platform-devops/ansible/roles/mongodb/tasks/main.yml
@@ -14,6 +14,10 @@
 
 - name: copy setup script
   template: src=orchestrator_setup.j2 dest={{ user_home }}/orchestrator_setup.js
+  tags:
+       - mongodb
 
 - name: run mongo script
-  shell: mongo < {{ user_home }}/orchestrator_setup.js
+  shell: mongo < {{ user_home }}/orchestrator_setup.js 
+  tags:
+       - mongodb
