--- a/platform-devops/ansible/roles/tomcat/tasks/main.yml
+++ b/platform-devops/ansible/roles/tomcat/tasks/main.yml
@@ -2,37 +2,64 @@
 - name: Download Tomcat
   get_url: url=http://archive.apache.org/dist/tomcat/tomcat-8/v8.0.36/bin/apache-tomcat-8.0.36.tar.gz dest=/home/ec2-user/ timeout=1000 force=no owner=ec2-user group=ec2-user
   tags:
-       - always
+       - learning
+       - language
+       - config
+       - search
+       - total
 
 - name: Extract archive
   unarchive: src=apache-tomcat-8.0.36.tar.gz dest=/home/ec2-user copy=no group=ec2-user owner=ec2-user creates={{ tomcat_home }}
   tags:
-       - always
+       - learning
+       - language
+       - config
+       - search
+       - total
 
 - name: Symlink install directory
   file: src={{ tomcat_home }} path=/usr/share/tomcat state=link
   tags:
-       - always
+       - learning
+       - language
+       - config
+       - search
+       - total
 
 - name: Change ownership of Tomcat installation
   file: path=/usr/share/tomcat/ owner=ec2-user group=ec2-user state=directory recurse=yes
   tags:
-       - always
+       - learning
+       - language
+       - config
+       - search
+       - total
 
 - name: create Catalina
   file: path={{ tomcat_home }}/conf/Catalina state=directory mode=755 
   tags:
-       - always
+       - learning
+       - language
+       - config
+       - search
+       - total
 
 - name: create localhost
   file: path={{ tomcat_home }}/conf/Catalina/localhost state=directory mode=755 
   tags:
-       - always
+       - learning
+       - language
+       - config
+       - search
 
 - name: set permission
   file: path={{ tomcat_home }}  mode=0755 owner=ec2-user group=ec2-user recurse=yes
   tags:
-       - always
+       - learning
+       - language
+       - config
+       - search
+       - total
 
 - name: add templates
   template: src={{ item.name }} dest={{ item.destination }}
@@ -41,7 +68,11 @@
     - { name: 'iptables-save', destination: '/etc/sysconfig/iptables' }
     - { name: 'catalina.j2', destination: '{{ tomcat_home }}/bin/catalina.sh' }
   tags:
-       - always
+       - learning
+       - language
+       - config
+       - search
+       - total
 
 - name: add templates language-service.xml
   template: src={{ item.name }} dest={{ item.destination }}
@@ -78,13 +109,21 @@
 - name: Install Tomcat init script
   copy: src=tomcat-initscript.sh dest=/etc/init.d/tomcat mode=755
   tags:
-       - always
+       - learning
+       - language
+       - config
+       - search
+       - total
+
 
 - name: set permission
   file: path={{ tomcat_home }}  mode=0755 owner=ec2-user group=ec2-user recurse=yes
   tags:
-       - always
-
+       - learning
+       - language
+       - config
+       - search
+       - total
 
 
 
