chore: removed export  mongodb script as deamon contributes:ekstep/Learning-Platform #616,617

--- a/platform-devops/ansible/roles/startservice/tasks/main.yml
+++ b/platform-devops/ansible/roles/startservice/tasks/main.yml
@@ -10,6 +10,7 @@
   become: yes
   service: name=mongod state=started
   when: "mongod_process.stdout == '0'"
+  ignore_errors: yes
 
 
 - name: Check if redis is running
