--- a/platform-devops/ansible/roles/mongodb/tasks/main.yml
+++ b/platform-devops/ansible/roles/mongodb/tasks/main.yml
@@ -7,10 +7,15 @@
 
 - name: install mongodb
   yum: name=mongodb-org state=present update_cache=yes
-  notify: mongodb start
   tags:
        - mongodb
 
+- name: mongodb start
+  become: yes
+  service: name=mongod state=started
+  tags:
+       - mongodb
+  
 - name: copy setup script
   template: src=orchestrator_setup.j2 dest={{ user_home }}/orchestrator_setup.js
   tags:
