--- a/platform-devops/ansible/roles/logstash/tasks/main.yml
+++ b/platform-devops/ansible/roles/logstash/tasks/main.yml
@@ -50,19 +50,29 @@
        - total 
 #******************************************Check the process is running or not*****************************************************
 - name: copy template of shell script to stop service
-  template: src=stop_logstash_script.j2 dest={{ user_home }}/stop_logstash_script.sh
+  template: src=stop_logstash_script1.j2 dest={{ user_home }}/stop_logstash_script1.sh
   tags: 
        - learning
        - language
+
+- name: copy template of shell script to stop service
+  template: src=stop_logstash_script2.j2 dest={{ user_home }}/stop_logstash_script2.sh
+  tags:
        - search
        - total
 
 - name: run script
   become: yes
-  shell: sh {{ user_home }}/stop_logstash_script.sh
+  shell: sh {{ user_home }}/stop_logstash_script1.sh
   tags: 
        - learning
        - language
+      
+
+- name: run script
+  become: yes
+  shell: sh {{ user_home }}/stop_logstash_script2.sh
+  tags: 
        - search
        - total
   
