Syntax: Tomcat stop with sudo contributes:ekstep/Learning-Platform #616,617

--- a/platform-devops/ansible/roles/deployartifact/tasks/main.yml
+++ b/platform-devops/ansible/roles/deployartifact/tasks/main.yml
@@ -2,6 +2,7 @@
 #tasks file for deployartifact
 
 - name: stop tomcat
+  become: yes
   service: name=tomcat state=stopped
   tags:
        - always
