--- a/platform-devops/ansible/roles/redis/tasks/main.yml
+++ b/platform-devops/ansible/roles/redis/tasks/main.yml
@@ -52,7 +52,7 @@
 
 - name: start redis
   become_user: ec2-user
-  shell: nohup src/redis-server &
+  shell: nohup src/redis-server --protected-mode no &
   args:
     chdir: /home/ec2-user/redis-stable/
   async: 60
