Syntax: corrected search spelling contributes:ekstep/Learning-Platform #616,617

--- a/platform-devops/ansible/roles/tomcat/tasks/main.yml
+++ b/platform-devops/ansible/roles/tomcat/tasks/main.yml
@@ -102,7 +102,7 @@
   with_items:  
     - { name: 'search-service.xml', destination: '{{ tomcat_home }}/conf/Catalina/localhost' }
   tags:
-       - serach
+       - search
        - total
 
 - name: add templates
