--- a/platform-devops/ansible/roles/deployartifact/tasks/main.yml
+++ b/platform-devops/ansible/roles/deployartifact/tasks/main.yml
@@ -11,6 +11,7 @@
   template: src=language/database.properties.j2 dest=/data/properties/language/database.properties
   tags:
        - language
+       - total
 
 - name: copy the elasticsearch.properties
   template: src=language/elasticsearch.properties.j2 dest=/data/properties/language/elasticsearch.properties
@@ -73,6 +74,7 @@
   template: src=learning/elasticsearch.properties.j2 dest=/data/properties/learning/elasticsearch.properties
   tags:
        - learning
+       - total
 
 
 - name: copy the graph.properties
@@ -127,7 +129,7 @@
 - name: copy the amazonS3Config.properties
   template: src=config/amazonS3Config.properties.j2 dest=/data/properties/config/amazonS3Config.properties
   tags:
-       - congig
+       - config
        - total
  
 
