Changes the graphed copying script

--- a/platform-devops/ansible/roles/copy-graphdb/tasks/main.yml
+++ b/platform-devops/ansible/roles/copy-graphdb/tasks/main.yml
@@ -4,6 +4,7 @@
   
        
 - name: run script
+  become: yes  
   shell:  /home/ec2-user/copy_graphdb_script.sh "{{machine}}"
   tags: 
        - always
