--- a/platform-devops/ansible/roles/extract-graphdb/tasks/main.yml
+++ b/platform-devops/ansible/roles/extract-graphdb/tasks/main.yml
@@ -3,6 +3,7 @@
   template: src=extract_graphdb_script.j2 dest={{ user_home }}/extract_graphdb_script.sh owner=ec2-user group=ec2-user mode=0751
        
 - name: run script
+  become: yes
   shell: /home/ec2-user/extract_graphdb_script.sh 
   tags: 
        - always
