Changes the graphed copying script

--- a/platform-devops/ansible/roles/copy-graphdb/tasks/main.yml
+++ b/platform-devops/ansible/roles/copy-graphdb/tasks/main.yml
@@ -5,6 +5,6 @@
        
 - name: run script
   become: yes  
-  shell:  /home/ec2-user/copy_graphdb_script.sh "{{machine}}"
+  shell: nohup /home/ec2-user/copy_graphdb_script.sh "{{machine}}" &
   tags: 
        - always
