--- a/platform-devops/ansible/roles/mongodb/tasks/main.yml
+++ b/platform-devops/ansible/roles/mongodb/tasks/main.yml
@@ -10,6 +10,13 @@
   tags:
        - mongodb
 
+- name: copy setup mongod.conf
+  become: yes
+  template: src=mongod.conf.j2 dest=/etc/mongod.conf
+  tags:
+       - mongodb
+
+
 - name: mongodb start
   become: yes
   service: name=mongod state=started
