Changes to copy_graphdb_script

--- a/platform-devops/ansible/roles/createpath/tasks/main.yml
+++ b/platform-devops/ansible/roles/createpath/tasks/main.yml
@@ -8,6 +8,7 @@
      - /data/contentBundle
      - /data/properties
      - /data/properties/learning
+     - /home/ec2-user/tmp
   tags:
        - learning
 
@@ -21,6 +22,7 @@
      - /data/contentBundle
      - /data/properties
      - /data/properties/language
+     - /home/ec2-user/tmp
   tags:
        - language
 
@@ -33,7 +35,7 @@
      - /data/contentBundle
      - /data/properties
      - /data/properties/search
-     
+     - /home/ec2-user/tmp
   tags:
        - search
 
@@ -46,6 +48,7 @@
      - /data/contentBundle
      - /data/properties
      - /data/properties/config
+     - /home/ec2-user/tmp
   tags:
        - config
 
@@ -62,13 +65,22 @@
      - /data/properties/learning
      - /data/properties/search
      - /data/properties/config
+     - /home/ec2-user/tmp
   tags:
        - total
 
+- name: Change ownership of data directory
+  become: yes
+  file: path=/home/ec2-user/tmp owner=ec2-user group=ec2-user  recurse=yes
+  tags:
+       - learning
+       - language
+       - config
+       - search
 
 - name: Change ownership of data directory
   become: yes
-  file: path=/data owner=ec2-user group=ec2-user state=directory recurse=yes
+  file: path=/data owner=ec2-user group=ec2-user  recurse=yes
   tags:
        - learning
        - language
