Play implementation|Project structure setup|second commit

--- a/searchIndex-platform/module/search-api/search-manager/conf/application.conf
+++ b/searchIndex-platform/module/search-api/search-manager/conf/application.conf
@@ -6,26 +6,10 @@
 # https://www.playframework.com/documentation/latest/JavaAkka#Configuration
 # ~~~~~
 akka {
-#log-config-on-start = true
-#SearchActorSystem{
-actor{
-	default-dispatcher {
-  		type = "Dispatcher"
-		executor = "fork-join-executor"
-		fork-join-executor {
-    		parallelism-min = 1
-    		parallelism-factor = 2.0
-    		parallelism-max = 4
-		}
-  		# Throughput for default Dispatcher, set to 1 for as fair as possible
-  		throughput = 1
-	}
-}
-
 loggers =["akka.event.Logging$DefaultLogger"]
-
+#log-config-on-start = true
 }
-include "servlet-context.xml"
+include "akka.conf"
 ## Secret key
 # http://www.playframework.com/documentation/latest/ApplicationSecret
 # ~~~~~
