--- a/platform-devops/ansible/roles/export-mongodb/tasks/main.yml
+++ b/platform-devops/ansible/roles/export-mongodb/tasks/main.yml
@@ -3,6 +3,6 @@
   template: src=export_mongodb.j2 dest={{ user_home }}/export_mongodb.sh owner=ec2-user group=ec2-user mode=0751
        
 - name: run script
-  shell: nohup /home/ec2-user/export_mongodb.sh  &
+  shell: /home/ec2-user/export_mongodb.sh 
   tags: 
        - always
