--- a/platform-core/platform-dac/pom.xml
+++ b/platform-core/platform-dac/pom.xml
@@ -56,6 +56,12 @@
 	</properties>
 
 	<dependencies>
+	 <dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>searchindex-elasticsearch</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
