Play implementation|Adding SearchBaseController and BasePlaySearchManager|#659,#660

--- a/searchIndex-platform/pom.xml
+++ b/searchIndex-platform/pom.xml
@@ -28,6 +28,7 @@
 		<module>module/composite-search-api</module>
 		<module>module/search-service</module>
 		<module>module/search-actors</module>
+                <module>module/search-api</module>
 	</modules>
 
 	<dependencies>
