--- a/platform-core/graph-engine/module/graph-dac-api/pom.xml
+++ b/platform-core/graph-engine/module/graph-dac-api/pom.xml
@@ -63,20 +63,22 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.neo4j.procedure/apoc -->
 		<dependency>
-		    <groupId>org.neo4j.procedure</groupId>
-		    <artifactId>apoc</artifactId>
-		    <version>1.1.0</version>
+			<groupId>org.neo4j.procedure</groupId>
+			<artifactId>apoc</artifactId>
+			<version>1.1.0</version>
 		</dependency>
 		<dependency>
-	        <groupId>org.neo4j.driver</groupId>
-	        <artifactId>neo4j-java-driver</artifactId>
-	        <version>1.1.0</version>
-   		</dependency>
-   		<!-- https://mvnrepository.com/artifact/org.neo4j/neo4j-ha -->
-		<dependency>
-		    <groupId>org.neo4j</groupId>
-		    <artifactId>neo4j-ha</artifactId>
-		    <version>3.0.7</version>
+			<groupId>org.neo4j.driver</groupId>
+			<artifactId>neo4j-java-driver</artifactId>
+			<version>1.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>net.iot-solutions.graphdb</groupId>
+			<artifactId>jcypher</artifactId>
+			<version>3.4.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.neo4j/neo4j-ha -->
+		<!-- <dependency> <groupId>org.neo4j</groupId> <artifactId>neo4j-ha</artifactId> 
+			<version>3.0.7</version> </dependency> -->
 	</dependencies>
 </project>
